# MerchantOS

./: .env.example  .gitignore  AGENTS.md  LOCAL_KERNEL.md  README.md  SPEC.md  architecture.html  package-lock.json  package.json  playwright.config.ts  playwright.gemma4.config.ts  playwright.tzafon.config.ts  spec.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  demo_data.py  errors.py  models.py  policies.py  routes.py  store.py
backend/app/agents/: __init__.py  factory.py  merchant_harness.py  plans.py  result_parser.py
backend/app/browser/: __init__.py  kernel_driver.py  kernel_runner.py
backend/app/computer/: __init__.py  openai_payloads.py  protocol.py  tzafon_computer.py  tzafon_payloads.py
backend/app/realtime/: __init__.py  messages.py
backend/app/services/: cart_service.py  computer_service.py  event_service.py  guide_service.py  simulation_service.py  telemetry_service.py  trace_service.py
backend/tests/: test_config.py  test_deepagents_factory.py  test_deepagents_harness.py  test_guide_service.py  test_intent_service.py  test_kernel_driver.py  test_kernel_runner.py  test_privacy.py  test_session_routes.py  test_simulation_service.py  test_tzafon_computer.py
cache_telemetry/: mcp_.py  sess_2b03662dbb.jsonl  sess_2b03662dbb.manifest.json  sess_379ec7fd3b.jsonl  sess_70a82b6427.jsonl  sess_b525215a65.jsonl  sess_d0d805bb1e.jsonl  sess_d0d805bb1e.manifest.json
e2e/: agentready.spec.ts  gemma4_harness.spec.ts  merchant_website.spec.ts  tzafon_merchant_website.spec.ts  tzafon_mock_server.mjs
frontend/: index.html  (+3 more)
(+49 files in other folders)
