[project]
name = "agentready-backend"
version = "0.1.0"
description = "Merchant-owned DeepAgents computer-use harness for agentic commerce"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.0.7",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=1.1.0",
  "openai>=1.99.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
